--- a/vignettes/SVMDO_guide.Rmd
+++ b/vignettes/SVMDO_guide.Rmd
@@ -44,6 +44,7 @@ devtools::install_github("robogeno/SVMDO")
 #runGUI()
 # OR
 #SVMDO::runGUI()
+```
 
 ```{r load_other_os, message=FALSE, warning=FALSE, eval=isFALSE(is_windows), echo=isFALSE(is_windows)}
 #library(SVMDO)
@@ -61,22 +62,22 @@ SVMDO was developed by using Shiny package. It is available for Windows and Linu
 # Dataset Preparation
 RNA-Seq cancer transcriptome and clinical datasets must be prepared before applying them in SVMDO. The datasets must be used in **txt** format. The expected designs of input datasets are indicated in Table-1 and Table-2 for transcriptome and clinical datasets respectively.
 
-```{r table_data_prep, echo=FALSE}
+```{r table_data_prep_1, echo=FALSE}
 id<-c("TCGA-AA-3662","TCGA-AA-3514","TCGA-D5-6541","...")
 tissue_type<-c("Normal","Normal","Tumour","...")
 AB1G<-c("Exp_1","Exp_2","Exp_3","...")
 A2M<-c("Exp_1","Exp_2","Exp_3","...")
-table_prep<-data.frame(id,tissue_type,AB1G,A2M)
+table_prep_1<-data.frame(id,tissue_type,AB1G,A2M)
 ```
-`r knitr::kable(table_prep,"pipe",col.name=c("id","tissue_type","AB1G","A2M"),align = "cccc",caption="Table-1 Structure of RNA-Seq Transcriptome Dataset")`
+`r knitr::kable(table_prep_1,"pipe",col.name=c("id","tissue_type","AB1G","A2M"),align = "cccc",caption="Table-1 Structure of RNA-Seq Transcriptome Dataset")`
 
-```{r table_data_prep, echo=FALSE}
+```{r table_data_prep_2, echo=FALSE}
 id<-c("TCGA-AA-3662","TCGA-AA-3514","TCGA-D5-6541","...")
 days_to_death<-c(49,1331,225,"...")
 vital_status<-c("Alive","Dead","Dead","...")
-table_prep<-data.frame(id,days_to_death,vital_status)
+table_prep_2<-data.frame(id,days_to_death,vital_status)
 ```
-`r knitr::kable(table_prep,"pipe",col.name=c("id","days_to_death","vital_status"),align = "cccc",caption="Table-2 Structure of Clinical Dataset")`
+`r knitr::kable(table_prep_2,"pipe",col.name=c("id","days_to_death","vital_status"),align = "cccc",caption="Table-2 Structure of Clinical Dataset")`
 
 * **tissue_type:** Normal/Tumour (or Tumor) Tissue Information 
 * **A1BG, A2M:** Gene Symbol and Gene Expression
