--- a/vignettes/SVMDO_guide.Rmd
+++ b/vignettes/SVMDO_guide.Rmd
@@ -85,7 +85,7 @@ table_prep_2<-data.frame(id,days_to_death,vital_status)
 * **days_to_death:** Survival Time of Patients 
 * **vital_status:** Vitality of Patients
 
-If there is not any requirement for **survival analysis**, preparation of **clinical dataset** and involvement of **id** column in the transcriptome dataset are optional.
+Using **tissue_type** and **id** as column names in the both datasets is mandatory. If there is not any requirement for **survival analysis**, preparation of **clinical dataset** and involvement of **id** column in the transcriptome dataset are optional.
 
 # SVMDO GUI Description
 The main dialog box is indicated in **Figure-1**. At each step of the GUI sections, necessary variables are saved as objects in the workspace environment to be used in the following sections. The input of SVMDO is a txt file of transcriptome dataset prepared in the form of **Table-1**. 
@@ -97,13 +97,12 @@ The main dialog box is indicated in **Figure-1**. At each step of the GUI sectio
 2. To change your output directory, you can adjust it in the **Choose Directory** section.  Otherwise, default output directory will automatically be used.
 3. To search your transcriptome dataset, use the file detection in **Choose Your Expression Dataset** section. The file will be automatically uploaded into the GUI.
 4. To prevent clashing with test datasets, select **"None"** option from the radio button section.
-6. By clicking on **DEG Analysis** button you further apply differential expression analysis. Labels of tissue_type column in dataset must contain “Nor” and “Tum” for determining normal/tumour (or tumor) samples. A meesage window saying process completed will appear if there is not any problem.
-8. When the process is completed, a message window saying **Differential Expression Analysis is Completed** will appear.
-9. When the differential expression process is completed, a user-defined input size (n) is selected to filter the initial gene list (i.e., n number of upregulated and downregulated genes) by entering a number in **Input Size** section. It is predetermined as **50** in GUI which can be changed based on the user. A meesage window saying **process completed** will appear if there is not any problem. If there is problem with the value of input size, you will get a warning about inappropriate input size selection. If the input size remains, algorithm selects all of the differentiallly expressed genes to be used in the next process.
-11. To apply disease ontology-based gene filtration, click on **DO Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
-12. To further apply the following feature selection and classification processes, click on the **Classification** button. A meesage window saying **process completed** will appear if there is not any problem.
-15. Acquired discriminative gene set can be further used for survival analysis to detect individual prognostic genes. To apply this process, use the file detection in **Choose Clinical Data** section for searching clinical data about patient survival followed by clicking on **Survival Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
-16. When the user task is completed, click on the **Clear Environment** button to remove the global variables created during the algorithm sections. To prevent error in the next usages of GUI, it is a necessary process. It can be applied at any moment without the necessity of completing all of the steps of algorithm. A meesage window saying **process completed** will appear if there is not any problem.
+5. By clicking on **DEG Analysis** button you further apply differential expression analysis. Labels of tissue_type column in dataset must contain “Nor” and “Tum” for determining normal/tumour (or tumor) samples. A meesage window saying **Process Completed** will appear if there is not any problem.
+6. When the differential expression process is completed, a user-defined input size (n) is selected to filter the initial gene list (i.e., n number of upregulated and downregulated genes) by entering a number in **Input Size** section. It is predetermined as **50** in GUI which can be changed based on the user. A meesage window saying **process completed** will appear if there is not any problem. If there is problem with the value of input size, you will get a warning about inappropriate input size selection. If the input size remains, algorithm selects all of the differentiallly expressed genes to be used in the next process.
+7. To apply disease ontology-based gene filtration, click on **DO Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
+8. To further apply the following feature selection and classification processes, click on the **Classification** button. A meesage window saying **process completed** will appear if there is not any problem.
+9. Acquired discriminative gene set can be further used for survival analysis to detect individual prognostic genes. To apply this process, use the file detection in **Choose Clinical Data** section for searching clinical data about patient survival followed by clicking on **Survival Analysis** button. A meesage window saying **process completed** will appear if there is not any problem.
+10. When the user task is completed, click on the **Clear Environment** button to remove the global variables created during the algorithm sections. To prevent error in the next usages of GUI, it is a necessary process. It can be applied at any moment without the necessity of completing all of the steps of algorithm. A meesage window saying **process completed** will appear if there is not any problem.
 
 # Using test datasets with SVMDO Main Screen
 Before using the GUI in a study, analysis using the test datasets can be used to understand overall functionality of the algorithm. Test datasets consists of objects of expression and Clinical datasets integrated into summarized experiment objects. These objects are saved in RDA forms and called from **extdata** folder of the package. 
